# thq-reup-desktop

./: .gitignore  BUILD-WINDOWS.md  PLAN.md  README.md  index.html  package-lock.json  package.json  vite.config.ts
.github/workflows/: build-windows.yml
engine/: go.mod  go.sum
engine/cmd/engine/: main.go
engine/ipc/: ipc.go
engine/ocr/: detect.go
engine/pipeline/: helpers.go  pipeline.go  stage1.go  stage2.go  stage3.go
engine/services/facebook/: client.go
engine/services/ffmpeg/: service.go
engine/services/openai/: client.go
engine/services/srtvoice/: client.go
engine/services/thq/: client.go
engine/store/: store.go
ocr-sidecar/: README.md  app.py  requirements.txt
scripts/: build-engine.ps1  build-engine.sh
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  installer-hooks.nsh  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/components/: AIContentEditor.tsx  Layout.tsx  SubtitleAreaEditor.tsx
src/lib/: auth.tsx  backend.ts  credentials.ts  engine.ts  settingsMap.ts
src/pages/: Dashboard.tsx  JobDetail.tsx  Keys.tsx  Login.tsx  NewJob.tsx  Settings.tsx
