[package]
name = "auto-reup-desktop"
version = "0.0.0"
description = "Auto ReUp Studio desktop app"
authors = ["THQ Solution"]
edition = "2021"
rust-version = "1.77"

[lib]
name = "auto_reup_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-http = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
keyring = "2"
log = "0.4"
tauri-plugin-log = "2"